commit: integracion de nombres

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <h1>🎮 Mini Juegos Online</h1>
 
 <div id="menu">
+  <input type="text" id="playerName" placeholder="Tu nombre" maxlength="12">
   <input type="color" id="colorPicker">
   <button id="create">Crear Sala</button>
   <input id="roomInput" placeholder="ID Sala">
